--- a/config/sync/core.entity_view_display.node.project.default.yml
+++ b/config/sync/core.entity_view_display.node.project.default.yml
@@ -33,12 +33,11 @@ third_party_settings:
       header:
         - node_title
       content:
-        - field_project_types
         - body
         - field_date
         - field_place
       contentsecond:
-        - field_body
+        - field_project_types
       gallery:
         - field_gallery
     fields:
@@ -59,19 +58,12 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 3
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_body:
-    weight: 6
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: contentsecond
   field_date:
-    weight: 4
+    weight: 3
     label: above
     settings:
       timezone_override: ''
@@ -80,7 +72,7 @@ content:
     type: datetime_default
     region: content
   field_gallery:
-    weight: 7
+    weight: 6
     label: above
     settings:
       image_style: ''
@@ -98,7 +90,7 @@ content:
     type: image
     region: picture
   field_place:
-    weight: 5
+    weight: 4
     label: above
     settings:
       link_to_entity: false
@@ -106,7 +98,7 @@ content:
     type: string
     region: content
   field_project_types:
-    weight: 2
+    weight: 5
     label: hidden
     settings:
       link: false
@@ -114,8 +106,9 @@ content:
       ds:
         ds_limit: ''
     type: entity_reference_label
-    region: content
+    region: contentsecond
 hidden:
+  field_body: true
   field_client: true
   langcode: true
   links: true
