--- a/config/sync/core.entity_view_display.node.project.teaser.yml
+++ b/config/sync/core.entity_view_display.node.project.teaser.yml
@@ -14,32 +14,65 @@ dependencies:
     - field.field.node.project.field_project_types
     - node.type.project
   module:
-    - text
+    - ds
+    - image
     - user
+third_party_settings:
+  ds:
+    layout:
+      id: layout-project-teaser
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        label: ''
+    regions:
+      picture:
+        - field_picture
+      content:
+        - node_title
+        - node_link
+    fields:
+      node_link:
+        plugin_id: node_link
+        weight: 2
+        label: hidden
+        formatter: default
+        settings:
+          'link text': 'Voir le projet'
+          'link class': ''
+          wrapper: ''
+          class: ''
+      node_title:
+        plugin_id: node_title
+        weight: 1
+        label: hidden
+        formatter: default
+        settings:
+          wrapper: ''
+          class: ''
+          link: false
 id: node.project.teaser
 targetEntityType: node
 bundle: project
 mode: teaser
 content:
-  body:
+  field_picture:
+    type: image
+    weight: 0
+    region: picture
     label: hidden
-    type: text_summary_or_trimmed
-    weight: 101
     settings:
-      trim_length: 600
+      image_style: ''
+      image_link: ''
     third_party_settings: {  }
-    region: content
-  links:
-    weight: 100
-    settings: {  }
-    third_party_settings: {  }
-    region: content
 hidden:
+  body: true
   field_body: true
   field_client: true
   field_date: true
   field_gallery: true
-  field_picture: true
   field_place: true
   field_project_types: true
   langcode: true
+  links: true
