--- a/config/sync/views.view.projects.yml
+++ b/config/sync/views.view.projects.yml
@@ -51,10 +51,17 @@ display:
       pager:
         type: some
         options:
-          items_per_page: 100
+          items_per_page: 4
           offset: 0
       style:
         type: html_list
+        options:
+          row_class: ''
+          default_row_class: true
+          uses_fields: false
+          type: ul
+          wrapper_class: item-list
+          class: list-projects
       row:
         type: 'entity:node'
         options:
@@ -134,21 +141,11 @@ display:
             operator_limit_selection: false
             operator_list: {  }
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
-          relationship: none
-          group_type: group
-          admin_label: ''
-          exposed: false
-          expose:
-            label: ''
-          granularity: second
+        random:
+          id: random
+          table: views
+          field: random
+          plugin_id: random
       title: Réalisations
       header: {  }
       footer: {  }
@@ -157,7 +154,7 @@ display:
       arguments: {  }
       display_extenders: {  }
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
@@ -178,6 +175,9 @@ display:
         use_more: false
         use_more_always: false
         use_more_text: false
+        sorts: false
+        link_display: false
+        link_url: false
       pager:
         type: some
         options:
@@ -186,8 +186,66 @@ display:
       use_more: true
       use_more_always: true
       use_more_text: 'Toutes mes réalisations'
+      sorts:
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: node
+          entity_field: created
+          plugin_id: date
+      link_display: page_1
+      link_url: ''
     cache_metadata:
       max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - 'user.node_grants:view'
+        - user.permissions
+      tags: {  }
+  block_others:
+    display_plugin: block
+    id: block_others
+    display_title: 'Block 2'
+    position: 3
+    display_options:
+      display_extenders: {  }
+      sorts:
+        random:
+          id: random
+          table: views
+          field: random
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: random
+      defaults:
+        sorts: false
+        link_display: false
+        link_url: false
+        use_more: false
+        use_more_always: false
+        use_more_text: false
+      link_display: page_1
+      link_url: ''
+      use_more: true
+      use_more_always: true
+      use_more_text: 'Toutes mes réalisations'
+    cache_metadata:
+      max-age: 0
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
@@ -201,12 +259,35 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: 'Mes réalisations'
+      path: mes-realisations
       menu:
         type: normal
         title: Réalisations
         menu_name: main
         weight: -48
+      pager:
+        type: none
+        options:
+          offset: 0
+      defaults:
+        pager: false
+        sorts: false
+      sorts:
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: node
+          entity_field: created
+          plugin_id: date
     cache_metadata:
       max-age: -1
       contexts:
