--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,14 @@
         "drupal/ds": "^3.6",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/mail_login": "^1.1",
+        "drupal/metatag": "^1.13",
+        "drupal/pathauto": "^1.8",
+        "drupal/redirect": "^1.6",
         "drupal/robots_noindex_nofollow": "^1.1",
+        "drupal/url_redirect": "^2.62",
         "drupal/video_embed_field": "^2.4",
         "drupal/webform": "^5.19",
+        "drupal/xmlsitemap": "^1.0",
         "drush/drush": "^10.2"
     },
     "conflict": {
