--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/core-project-message": "^8.8",
         "drupal/core-recommended": "^8.8",
         "drupal/ds": "^3.6",
+        "drupal/google_analytics": "^3.1",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/mail_login": "^1.1",
         "drupal/metatag": "^1.13",
