--- a/config/sync/core.entity_view_display.node.homepage.default.yml
+++ b/config/sync/core.entity_view_display.node.homepage.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.homepage.field_body3
     - field.field.node.homepage.field_link
     - field.field.node.homepage.field_link2
+    - field.field.node.homepage.field_metatag
     - field.field.node.homepage.field_picture
     - field.field.node.homepage.field_subtitle
     - node.type.homepage
@@ -87,5 +88,6 @@ content:
 hidden:
   field_body3: true
   field_link2: true
+  field_metatag: true
   langcode: true
   links: true
