--- a/config/sync/core.entity_view_display.node.page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.page.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
+    - field.field.node.page.field_metatag
     - node.type.page
   module:
     - text
@@ -28,4 +29,5 @@ content:
     weight: 101
     region: content
 hidden:
+  field_metatag: true
   langcode: true
