--- a/config/sync/core.entity_view_display.node.webform.teaser.yml
+++ b/config/sync/core.entity_view_display.node.webform.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.webform.body
     - field.field.node.webform.field_explication
+    - field.field.node.webform.field_metatag
     - field.field.node.webform.field_picture
     - field.field.node.webform.field_subtitle
     - field.field.node.webform.webform
@@ -35,6 +36,7 @@ content:
     region: content
 hidden:
   field_explication: true
+  field_metatag: true
   field_picture: true
   field_subtitle: true
   langcode: true
