--- a/config/sync/core.entity_view_display.node.project.teaser.yml
+++ b/config/sync/core.entity_view_display.node.project.teaser.yml
@@ -32,6 +32,7 @@ third_party_settings:
         - field_picture
       content:
         - node_title
+      link:
         - node_link
     fields:
       node_link:
