--- a/config/sync/core.entity_form_display.node.about.default.yml
+++ b/config/sync/core.entity_form_display.node.about.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.about.field_body
     - field.field.node.about.field_body2
     - field.field.node.about.field_field_body
+    - field.field.node.about.field_file
     - field.field.node.about.field_link
     - field.field.node.about.field_metatag
     - field.field.node.about.field_picture
@@ -15,8 +16,8 @@ dependencies:
     - image.style.thumbnail
     - node.type.about
   module:
+    - file
     - image
-    - link
     - metatag
     - path
     - text
@@ -27,7 +28,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 5
+    weight: 3
     settings:
       rows: 9
       summary_rows: 3
@@ -36,7 +37,7 @@ content:
     third_party_settings: {  }
     region: content
   field_body2:
-    weight: 10
+    weight: 7
     settings:
       rows: 9
       summary_rows: 3
@@ -46,7 +47,7 @@ content:
     type: text_textarea_with_summary
     region: content
   field_field_body:
-    weight: 9
+    weight: 6
     settings:
       rows: 9
       summary_rows: 3
@@ -55,23 +56,22 @@ content:
     third_party_settings: {  }
     type: text_textarea_with_summary
     region: content
-  field_link:
-    weight: 3
+  field_file:
+    weight: 4
     settings:
-      placeholder_url: ''
-      placeholder_title: ''
+      progress_indicator: throbber
     third_party_settings: {  }
-    type: link_default
+    type: file_generic
     region: content
   field_metatag:
-    weight: 26
+    weight: 10
     settings:
       sidebar: true
     third_party_settings: {  }
     type: metatag_firehose
     region: content
   field_picture:
-    weight: 0
+    weight: 2
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -79,13 +79,13 @@ content:
     type: image_image
     region: content
   field_project_types:
-    weight: 6
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
     region: content
   field_subtitle:
-    weight: 2
+    weight: 1
     settings:
       size: 60
       placeholder: ''
@@ -94,7 +94,7 @@ content:
     region: content
   path:
     type: path
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -102,32 +102,27 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
-    region: content
-    third_party_settings: {  }
-  sticky:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 4
+    weight: 9
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 1
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 11
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden:
   created: true
   field_body: true
+  field_link: true
   langcode: true
   promote: true
+  sticky: true
   uid: true
