--- a/config/sync/node.type.about.yml
+++ b/config/sync/node.type.about.yml
@@ -9,7 +9,7 @@ third_party_settings:
     available_menus:
       - main
     parent: 'main:'
-name: about
+name: About
 type: about
 description: ''
 help: ''
