--- a/config/sync/core.entity_view_display.node.project.default.yml
+++ b/config/sync/core.entity_view_display.node.project.default.yml
@@ -12,14 +12,15 @@ dependencies:
     - field.field.node.project.field_picture
     - field.field.node.project.field_place
     - field.field.node.project.field_project_types
+    - field.field.node.project.field_video
     - node.type.project
   module:
     - datetime
     - ds
     - image
-    - metatag
     - text
     - user
+    - video_embed_field
 third_party_settings:
   ds:
     layout:
@@ -42,6 +43,7 @@ third_party_settings:
         - field_project_types
       gallery:
         - field_gallery
+        - field_video
     fields:
       node_title:
         plugin_id: node_title
@@ -75,20 +77,13 @@ content:
     region: content
   field_gallery:
     weight: 6
-    label: above
+    label: hidden
     settings:
       image_style: ''
       image_link: ''
     third_party_settings: {  }
     type: image
     region: gallery
-  field_metatag:
-    weight: 7
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: metatag_empty_formatter
-    region: content
   field_picture:
     weight: 0
     label: hidden
@@ -116,8 +111,20 @@ content:
         ds_limit: ''
     type: entity_reference_label
     region: contentsecond
+  field_video:
+    weight: 7
+    label: hidden
+    settings:
+      responsive: true
+      width: 854
+      height: 480
+      autoplay: true
+    third_party_settings: {  }
+    type: video_embed_field_video
+    region: gallery
 hidden:
   field_body: true
   field_client: true
+  field_metatag: true
   langcode: true
   links: true
