--- a/config/sync/field.field.node.about.field_file.yml
+++ b/config/sync/field.field.node.about.field_file.yml
@@ -20,7 +20,7 @@ default_value_callback: ''
 settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'txt rtf pdf jpg png'
-  max_filesize: ''
+  max_filesize: 50mb
   description_field: true
   handler: 'default:file'
   handler_settings: {  }
